# StereoCamera

./: README.md
CameraCalibration/: CameraCalibration.cpp  CameraCalibration.vcxproj  CameraCalibration.vcxproj.filters  SoloCalibration.cpp  SoloCalibration.h
CameraCalibration/Output/: extrinsics.yml  intrinsics.yml
CameraCalibration/x64/Debug/: vc140.idb
CameraCalibration/x64/Debug/CameraCa.CD76865E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CameraCalibration.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CameraCalibration/x64/Release/CameraCa.CD76865E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
StereoCamera/: .h  68points.txt  Model.h  Shader.h  Stereo.frag  Stereo.vs  StereoCamera.sln  StereoCamera.vcxproj  StereoCamera.vcxproj.filters  StereoMatch.cpp  b.pcd  pointcloud.pcd  pointcloud.txt
StereoCamera/data/: CameraIntrinsicsL.yml  CameraIntrinsicsR.yml  extrinsics.yml  intrinsics.yml
StereoCamera/include/: Facedetect.cpp  LBF.cpp  LBF.h  LBFRegressor.cpp  LBF_api.h  RandomForest.cpp  Utils.cpp  cascade.xml
StereoCamera/include/test/opencv-detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detection  detection.cpp  detection.cpp~
StereoCamera/x64/Debug/: CameraCalibration.ilk  StereoCamera.ilk  vc140.idb
StereoCamera/x64/Debug/StereoCamera.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+4 more)
StereoCamera/x64/Release/: CameraCalibration.iobj  CameraCalibration.ipdb  StereoCamera.iobj  StereoCamera.ipdb  TEST.iobj  TEST.ipdb
(+7 files in other folders)
